refactor: rename dto to types
