# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_auth_dto.LoginRequest"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_auth_types.LoginRequest"
                         }
                     }
                 ],
@@ -37,7 +37,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_auth_dto_AuthResponse"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_auth_types_AuthResponse"
                         }
                     },
                     "400": {
@@ -75,7 +75,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_auth_dto.RegisterRequest"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_auth_types.RegisterRequest"
                         }
                     }
                 ],
@@ -83,7 +83,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_auth_dto_AuthResponse"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_auth_types_AuthResponse"
                         }
                     },
                     "400": {
@@ -117,7 +117,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-array_project-2026-06-misoastory-be-go_internal_modules_categories_dto_CategoryResponse"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-array_project-2026-06-misoastory-be-go_internal_modules_categories_types_CategoryResponse"
                         }
                     },
                     "500": {
@@ -152,7 +152,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_categories_dto.CreateCategoryRequest"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_categories_types.CreateCategoryRequest"
                         }
                     }
                 ],
@@ -160,7 +160,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_categories_dto_CategoryResponse"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_categories_types_CategoryResponse"
                         }
                     },
                     "400": {
@@ -219,7 +219,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_categories_dto_CategoryResponse"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_categories_types_CategoryResponse"
                         }
                     },
                     "400": {
@@ -335,7 +335,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_categories_dto.UpdateCategoryRequest"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_categories_types.UpdateCategoryRequest"
                         }
                     }
                 ],
@@ -343,7 +343,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_categories_dto_CategoryResponse"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_categories_types_CategoryResponse"
                         }
                     },
                     "400": {
@@ -399,7 +399,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_health_dto_HealthResponse"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_health_types_HealthResponse"
                         }
                     }
                 }
@@ -462,7 +462,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_locations_dto.CreateLocationRequest"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_locations_types.CreateLocationRequest"
                         }
                     }
                 ],
@@ -470,7 +470,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_locations_dto_LocationResponse"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_locations_types_LocationResponse"
                         }
                     },
                     "400": {
@@ -645,7 +645,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_locations_dto.UpdateLocationRequest"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_locations_types.UpdateLocationRequest"
                         }
                     }
                 ],
@@ -706,7 +706,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-array_project-2026-06-misoastory-be-go_internal_modules_users_dto_UserResponse"
+                            "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_common_dto.Response-array_project-2026-06-misoastory-be-go_internal_modules_users_types_UserResponse"
                         }
                     },
                     "401": {
@@ -763,7 +763,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_common_dto.Response-array_project-2026-06-misoastory-be-go_internal_modules_categories_dto_CategoryResponse": {
+        "project-2026-06-misoastory-be-go_internal_common_dto.Response-array_project-2026-06-misoastory-be-go_internal_modules_categories_types_CategoryResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -772,7 +772,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_categories_dto.CategoryResponse"
+                        "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_categories_types.CategoryResponse"
                     }
                 },
                 "message": {
@@ -780,7 +780,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_common_dto.Response-array_project-2026-06-misoastory-be-go_internal_modules_users_dto_UserResponse": {
+        "project-2026-06-misoastory-be-go_internal_common_dto.Response-array_project-2026-06-misoastory-be-go_internal_modules_users_types_UserResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -789,7 +789,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_users_dto.UserResponse"
+                        "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_users_types.UserResponse"
                     }
                 },
                 "message": {
@@ -811,56 +811,56 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_auth_dto_AuthResponse": {
+        "project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_auth_types_AuthResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
                 "data": {
-                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_auth_dto.AuthResponse"
+                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_auth_types.AuthResponse"
                 },
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_categories_dto_CategoryResponse": {
+        "project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_categories_types_CategoryResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
                 "data": {
-                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_categories_dto.CategoryResponse"
+                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_categories_types.CategoryResponse"
                 },
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_health_dto_HealthResponse": {
+        "project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_health_types_HealthResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
                 "data": {
-                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_health_dto.HealthResponse"
+                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_health_types.HealthResponse"
                 },
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_locations_dto_LocationResponse": {
+        "project-2026-06-misoastory-be-go_internal_common_dto.Response-project-2026-06-misoastory-be-go_internal_modules_locations_types_LocationResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer"
                 },
                 "data": {
-                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_locations_dto.LocationResponse"
+                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_locations_types.LocationResponse"
                 },
                 "message": {
                     "type": "string"
@@ -937,18 +937,18 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_auth_dto.AuthResponse": {
+        "project-2026-06-misoastory-be-go_internal_modules_auth_types.AuthResponse": {
             "type": "object",
             "properties": {
                 "token": {
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_users_dto.UserResponse"
+                    "$ref": "#/definitions/project-2026-06-misoastory-be-go_internal_modules_users_types.UserResponse"
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_auth_dto.LoginRequest": {
+        "project-2026-06-misoastory-be-go_internal_modules_auth_types.LoginRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -963,7 +963,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_auth_dto.RegisterRequest": {
+        "project-2026-06-misoastory-be-go_internal_modules_auth_types.RegisterRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -987,7 +987,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_categories_dto.CategoryResponse": {
+        "project-2026-06-misoastory-be-go_internal_modules_categories_types.CategoryResponse": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -1016,7 +1016,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_categories_dto.CreateCategoryRequest": {
+        "project-2026-06-misoastory-be-go_internal_modules_categories_types.CreateCategoryRequest": {
             "type": "object",
             "required": [
                 "name"
@@ -1036,7 +1036,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_categories_dto.UpdateCategoryRequest": {
+        "project-2026-06-misoastory-be-go_internal_modules_categories_types.UpdateCategoryRequest": {
             "type": "object",
             "properties": {
                 "description": {
@@ -1053,7 +1053,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_health_dto.HealthResponse": {
+        "project-2026-06-misoastory-be-go_internal_modules_health_types.HealthResponse": {
             "type": "object",
             "properties": {
                 "status": {
@@ -1064,7 +1064,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_locations_dto.CreateLocationRequest": {
+        "project-2026-06-misoastory-be-go_internal_modules_locations_types.CreateLocationRequest": {
             "type": "object",
             "required": [
                 "address",
@@ -1113,7 +1113,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_locations_dto.LocationResponse": {
+        "project-2026-06-misoastory-be-go_internal_modules_locations_types.LocationResponse": {
             "type": "object",
             "properties": {
                 "address": {
@@ -1169,7 +1169,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_locations_dto.UpdateLocationRequest": {
+        "project-2026-06-misoastory-be-go_internal_modules_locations_types.UpdateLocationRequest": {
             "type": "object",
             "properties": {
                 "address": {
@@ -1213,7 +1213,7 @@
                 }
             }
         },
-        "project-2026-06-misoastory-be-go_internal_modules_users_dto.UserResponse": {
+        "project-2026-06-misoastory-be-go_internal_modules_users_types.UserResponse": {
             "type": "object",
             "properties": {
                 "email": {
