# internal/modules/health/health.handler.go
@@ -7,7 +7,7 @@ import (
 	"github.com/gin-gonic/gin"
 
 	"project-2026-06-misoastory-be-go/internal/common/dto"
-	healthdto "project-2026-06-misoastory-be-go/internal/modules/health/dto"
+	healthtypes "project-2026-06-misoastory-be-go/internal/modules/health/types"
 	"project-2026-06-misoastory-be-go/internal/common/utils"
 )
 
@@ -16,10 +16,10 @@ import (
 // @Description Returns the current status of the API
 // @Tags health
 // @Produce json
-// @Success 200 {object} dto.Response[healthdto.HealthResponse]
+// @Success 200 {object} dto.Response[healthtypes.HealthResponse]
 // @Router /health [get]
 func HealthCheck(c *gin.Context) {
-	utils.SuccessResponse(c, http.StatusOK, "API is running smoothly", healthdto.HealthResponse{
+	utils.SuccessResponse(c, http.StatusOK, "API is running smoothly", healthtypes.HealthResponse{
 		Status:    "OK",
 		Timestamp: time.Now(),
 	})
